# FrugalFreighter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: tests.yaml
frugal_freighter/: app.py  type_defs.py
frugal_freighter/handler/: event.py  factory.py  interruption.py  placement.py
frugal_freighter/loadbalancing/: alb.py  elb.py  factory.py  nlb.py
tests/: test_app.py  test_base.py
tests/handler/: test_event.py  test_factory.py
tests/loadbalancing/: test_elb.py  test_factory.py
