[tool.poetry]
name = "frugal_freighter"
version = "0.1.0"
description = "Ship your containers into AWS as cost effectively as possible without sacrificing availability."
authors = ["Demetrius Shargani <https://github.com/developerDemetri>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.9.2"
awslambdaric = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flexmock = "^0.10.4"
mypy = "^0.812"
pylint = "^2.7.2"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.2"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pylint.messages_control]
disable = "C0114"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
minversion = "6.2.2"
addopts = "--cov=frugal_freighter --cov-branch --cov-fail-under=95 --cov-report html --cov-report xml"
testpaths = [
    "tests",
]
