[tool.poetry]
name = "frugal_freighter"
version = "0.1.0"
description = "Ship your containers into AWS as cost effectively as possible without sacrificing availability."
authors = ["Demetrius Shargani <https://github.com/developerDemetri>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "~3.9.2"
awslambdaric = "~1.1.0"
boto3 = "~1.17.88"
boto3-stubs = {version = "~1.17.88", extras = ["elbv2"]}
ecs-logging = "~1.0.0"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
mypy = "^0.812"
pylint = "^2.8.3"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.2"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pylint.messages_control]
disable = "C0114, R0903, W1203"

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
addopts = "--cov=frugal_freighter --cov-branch --cov-fail-under=95 --cov-report html --cov-report xml"
console_output_style = "progress"
minversion = "6.2"
testpaths = [
    "tests",
]
